added  infinite scroll funtionality, added the the task detail page and the comment section and added the websocket  to comment funtoinality
