# animation/server/routes/taskRoutes.js
@@ -3,6 +3,7 @@ import {
   getAllTasks,
   getMyTasks,
   getAssignedTasks,
+  getTaskById,
   createTask,
   updateTask,
   deleteTask,
@@ -13,6 +14,8 @@ const router = express.Router();
 
 router.get("/my-tasks", verifyToken, getMyTasks);
 router.get("/assigned-tasks", verifyToken, getAssignedTasks);
+router.get("/task-detail/:id", verifyToken, getTaskById);
+router.get("/:id", verifyToken, getTaskById);
 router.get("/", verifyToken, getAllTasks);
 router.post("/", verifyToken, createTask);
 router.put("/:id", verifyToken, updateTask);
